[package]
name = "xp-aws-s3"
version = "0.1.0"
edition = "2024"
resolver = "3"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# -- AWS
aws-config = "1"
aws-sdk-s3 = "1"
# -- Others
derive_more = { version = "2", features = ["from", "display"] }
